--- a/edit-profil-dosis.html
+++ b/edit-profil-dosis.html
@@ -473,7 +473,7 @@
                     <div class="tabs-animation">
                         <div class="col-md-12">
                             <div class="card-hover-shadow-2x mb-3 card">
-                                <div class="card-header">Edit Profil</div>
+                                <div class="card-header">Edit</div>
                                 <div class="content-right ">
                                     <center><img width="100" class="rounded-circle" src="assets/images/avatars/14.jpg" alt=""></center>
                                 </div></br>
