--- a/edit-profil-dosis.html
+++ b/edit-profil-dosis.html
@@ -473,7 +473,7 @@
                     <div class="tabs-animation">
                         <div class="col-md-12">
                             <div class="card-hover-shadow-2x mb-3 card">
-                                <div class="card-header">Edit</div>
+                                <div class="card-header">Edit Profil</div>
                                 <div class="content-right ">
                                     <center><img width="100" class="rounded-circle" src="assets/images/avatars/14.jpg" alt=""></center>
                                 </div></br>
@@ -486,7 +486,7 @@
                             <div class="card-hover-shadow-2x mb-3 card">
                                 <div class="card-header">nama lengkap</div>
                                 <div class="">
-                                    <input name="text" placeholder="masukan nama lengkap anda...." type="text" class="form-control">
+                                    <input name="text" value="ABDUL HASAN" type="text" class="form-control">
                                 </div>
                             </div>
                         </div>
@@ -494,7 +494,13 @@
                             <div class="card-hover-shadow-2x mb-3 card">
                                 <div class="card-header">jenis kelamin</div>
                                 <div class="">
-                                    <input name="text" placeholder="" type="text" class="form-control">
+                                    <div class="position-relative form-group">
+                                        <select name="select" id="exampleSelect" class="form-control">
+                                            <option>Laki - laki</option>
+                                            <option>Perempuan</option>
+                                        </select>
+                                    </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -502,13 +508,32 @@
                             <div class="card-hover-shadow-2x mb-3 card">
                                 <div class="card-header">provinsi</div>
                                 <div class="">
-                                    <input name="text" placeholder="" type="text" class="form-control">
+                                    <div class="position-relative form-group">
+                                        <select name="select" id="exampleSelect" class="form-control">
+                                            <option>Aceh</option>
+                                            <option>Sumatera Utara</option>
+                                            <option>Sumatera Barat</option>
+                                            <option>Riau</option>
+                                            <option>Kepulauan Riau</option>
+                                            <option>Jambi</option>
+                                            <option>Sumatera Selatan</option>
+                                            <option>Kepulauan Bangka Belitun</option>
+                                            <option>Bengkulu</option>
+                                            <option>Lampung</option>
+                                            <option>DKI Jakarta</option>
+                                            <option>Banten</option>
+                                            <option>Jawa Barat</option>
+                                            <option>Jawa Tengah</option>
+                                            <option>DI Yogyakartn</option>
+                                            <option>Jawa Timur</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="card-hover-shadow-2x mb-3 card">
-                                <div class="card-header">kabupaten</div>
+                                <div class="card-header">kota/kabupaten</div>
                                 <div class="">
                                     <input name="text" placeholder="" type="text" class="form-control">
                                 </div>
