--- a/edit-profil-dosis.html
+++ b/edit-profil-dosis.html
@@ -524,7 +524,7 @@
                                             <option>Banten</option>
                                             <option>Jawa Barat</option>
                                             <option>Jawa Tengah</option>
-                                            <option>DI Yogyakartn</option>
+                                            <option>DI Yogyakarta</option>
                                             <option>Jawa Timur</option>
                                         </select>
                                     </div>
